# Software_Programmierung

./: .gitignore  README.md  df_sorted.html  map.html
2BHWII/: JG01_SWP1_listenSChonWIeder.py  SUE04-Teil2_einfacheSchleife.py  Taschenrechner-2.0
HTML_BASICS/: Lebenslauf.html
Schulsachen/: SUE_20221110.py  Taschenrechner2aufgabe  turtle_figuren_Kattner.py
Schulsachen/2BHWII/: SUE03_Datentypen_Teil2.py  SUE04_Taschenrechner_kattner.py  SUE08_Funktionen_und_Listen  SUE_03_Datentypen_EVA.py  WP_SWP1_22_Kattner.py  Weihnachtsbaum.xlsm.xlsx  caeser_verschlüsselung.py  listenhüRat.py  turtle_initialien.py
Schulsachen/2BHWII/König/: erste.html  zweite.html
Schulsachen/2BHWII/SU02Modularisierung.py/tgmtools/: hallo.py
Schulsachen/3BWHII/BIGDATA/Spark_Hadoop/: main.py
Schulsachen/3BWHII/BIGDATA/maprecude/: data.txt  fragen.docx  mapper.py  output.json  plotter.py  reducer.py  run.bat  saver.py
Schulsachen/3BWHII/Fibonacci_Wiederholung/: fibo_module.py  main.py
Schulsachen/3BWHII/Hypixel_Skyblock_Class_Textadventure/: vorstellung.txt
Schulsachen/3BWHII/NWES/: main.c
Schulsachen/3BWHII/NWES/Cmakedateien/Multitaskprojekt/Multitaskprojekt/: CMakeLists.txt  Multitaskprojekt.cpp  Multitaskprojekt.h
Schulsachen/3BWHII/OOP/: decorators.py
Schulsachen/3BWHII/Pap_zu_code_Rechner/: main.py
Schulsachen/3BWHII/UE01_Erst_PAP_Kattner/: main.py
Schulsachen/HTML_BASICS/: SU14_HTML_Angabe.html
Schulsachen/König/: erste.html
Schulsachen/SU02Modularisierung.py/: main.py
Schulsachen/SU02Modularisierung.py/tgmtools/: io.py  mathe.py
(+139 files in other folders)
